--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="home">Home</string>
     <string name="favorite">Favorite</string>
     <string name="settings">Settings</string>
+    <string name="error_msg">Something went wrong!</string>
 
 </resources>
